<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.PreferencesFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/medicine_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/preferences_medicine_time"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/sleep_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/medicine_time_label"
            android:layout_marginTop="24dp"
            android:layout_toStartOf="@+id/to_label"
            android:text="@string/preferences_sleep_time"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/to_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/sleep_time_label"
            android:layout_alignBottom="@+id/sleep_time_label"
            android:layout_marginStart="85dp"
            android:layout_toEndOf="@+id/medicine_time_label"
            android:text="@string/preferences_to"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/medicine_time_value"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/medicine_time_label"
            android:layout_alignBottom="@+id/medicine_time_label"
            android:layout_marginRight="8dp"
            android:layout_marginStart="13dp"
            android:layout_toEndOf="@+id/medicine_time_label"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/sleep_time_from_value"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/sleep_time_label"
            android:layout_alignBottom="@+id/sleep_time_label"
            android:layout_alignStart="@+id/medicine_time_value"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/sleep_time_to_value"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/to_label"
            android:layout_alignBottom="@+id/to_label"
            android:layout_marginLeft="260dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/update_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/preferences_update_button"
            android:layout_below="@+id/sleep_time_from_value"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
</FrameLayout>
